--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -63,7 +64,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-          "proxyConfig": "src/proxy.conf.json",
+          "options": {
+            "browserTarget": "familyEventFinance:build",
+            "proxyConfig": "src/proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "familyEventFinance:build:production"
